Added a list of all available models and snow modules, updated References with a link

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,7 @@ articles:
   navbar: ~
   contents:
   - run_model_minimalistic
+  - model_overview
   - include_snow_module
   - calibrate_validate
 
