created vignettes and manual as pdf and linked them on the webpage (they need to be in the docs folder

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,12 @@
 url: https://mw-schirmer.github.io/openQUARREL/
 template:
   bootstrap: 5
+navbar:
+  right:
+    - text: "Manual (PDF)"
+      href: "openQUARREL_manual.pdf"
+    - text: "Vignettes (PDF)"
+      href: "Vignettes_Combined.pdf"
 articles:
 - title: Articles
   navbar: ~
