--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,4 +16,8 @@ articles:
   - include_snow_module
   - calibration_methods_overview
   - calibrate_validate
+extra_files:
+  - inst/pkg_extra/openQUARREL_manual.pdf
+  - inst/pkg_extra/Vignettes_Combined.pdf
+
 
